# bibneat

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  INSTALL.md  Makefile  README.md  make-release.sh  vcpkg.json
.github/workflows/: Ubuntu.yaml  Windows.yaml  macos.yaml
.github/workflowsSTOP/: Ubuntu.yaml  Windows.yaml  macOS.yaml
docs/tex/: bibneat.tex  libbibneat.tex
src/: bibgrab.cpp  bibneat.cpp
src/cli/: cliOptions.cpp  cliOptions.hpp  cliParser.hpp  cliParserAdding.cpp  cliParserGetting.cpp  cliParserHelp.cpp  cliParserParsing.cpp
src/database/: bibfile.cpp  bibfile.hpp  parser.cpp  parser.hpp  printer.cpp  printer.hpp  tokens.hpp
src/recipes/: apicalls.cpp  apicalls.hpp  fieldfilter.cpp  fieldfilter.hpp  keepbibtex.hpp
src/requests/: requests.c  requests.h
src/uni/: fieldnormalization.cpp  fieldnormalization.hpp  icuUtils.cpp  icuUtils.hpp  normalizer.cpp  normalizer.hpp  utf82latex.hpp
src/utils/: attributes.hpp  debug.hpp  exitCodes.hpp  pathUtils.cpp  pathUtils.hpp  stringUtils.cpp  stringUtils.hpp  umap.hpp
test/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  vcpkg.json
test/src/: testApiOffline.cpp  testAutoIncrementIndex.cpp  testBibfilesLoc.cmake.h.in  testFiltering.cpp  testParsing.cpp  testUnicode.cpp
test/srcOnline/: testOnlineFromEntry.cpp  testOnlineImmediate.cpp
test/testBibfiles/: arxiv.bib  bad.bib  extra.bib  groups.bib  multiple.bib  nonAscii.bib  preamble.bib  quotes.bib  single.bib  special.bib
wasm/: CMakeLists.txt  CMakePresets.json  vcpkg.json
wasm/bindings/: embindings.cpp  embindings.hpp
wasm/handlers/: jsapihandler.cpp  jsapihandler.hpp
wasm/lib/: bibneat.js
wasm/lib/node/: bibneat.js
wasm/lib/web/: bibneat.js
wasm/test/: api_offline.test.js  creation.js  creation.test.js  filtering.test.js  parsing.test.js  printing.test.js  run.sh  unicode.test.js
